--- a/features/base/src/main/res/values/languages.xml
+++ b/features/base/src/main/res/values/languages.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources translatable="false">
     <string-array name="languages">
+        <item>sq|31</item>
         <item>ar|99</item>
+        <item>az|1</item>
         <item>bn|5</item>
         <item>bs|93</item>
         <item>zh-CN|3</item>
@@ -9,9 +11,9 @@
         <item>en|100</item>
         <item>fr|93</item>
         <item>de|100</item>
-        <item>id|91</item>
+        <item>id|100</item>
         <item>kur|43</item>
-        <item>ru|75</item>
+        <item>ru|87</item>
         <item>tr|100</item>
         <item>uk|64</item>
         <item>ur-PK|2</item>
