--- a/features/times/src/main/res/layout/vakit_notprefs_item.xml
+++ b/features/times/src/main/res/layout/vakit_notprefs_item.xml
@@ -602,7 +602,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="@string/useVibration"
+            android:text="@string/vibration"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/volume" />
